Agrego medios de pago

--- a/pages/detalles-de-producto/remeras/remera-4.html
+++ b/pages/detalles-de-producto/remeras/remera-4.html
@@ -75,6 +75,23 @@
                 <button class="Botones container-fluid p-2 rounded bg-primary">
                     <h4>Agregar al Carrito</h4>
                 </button>
+                <div class="my-2">
+                    <details class="Interior p-3 rounded mb-2">
+                        <summary class="fs-5">DESCRIPCIÓN</summary>
+                        <p></p>
+                        <p><strong class="me-1">Material:</strong> Algodon</p>
+                        <p><strong class="me-1">Color:</strong> Negro</p>
+                        <p>Talle 1: ancho 54 cm, largo 64 cm</p>
+                        <p>Talle 2: ancho 56 cm, largo 66 cm</p>
+                        <p>Talle 3: ancho 58 cm, largo 68 cm</p>
+                        <P>Talle 4: ancho 60 cm, largo 70 cm</P>
+                    </details>
+                    <details class="Interior p-3 rounded">
+                        <summary class="fs-5">MEDIOS DE PAGO</summary>
+                        <p>3 cuotas sin interés de $4.999</p>
+                        <p>20% de descuento pagando con Efectivo o Transferencia</p>
+                    </details>
+                </div>
             </div>
         </div>
     </main>
