Actualizo el detalle de producto

--- a/pages/detalles-de-producto/remeras/remera-4.html
+++ b/pages/detalles-de-producto/remeras/remera-4.html
@@ -78,7 +78,8 @@
                 <div class="my-2">
                     <details class="Interior p-3 rounded mb-2">
                         <summary class="fs-5">DESCRIPCIÓN</summary>
-                        <p></p>
+                        <p>Camiseta de manga corta con estampado, adecuada para uso diario en
+                            primavera y verano, escuela</p>
                         <p><strong class="me-1">Material:</strong> Algodon</p>
                         <p><strong class="me-1">Color:</strong> Negro</p>
                         <p>Talle 1: ancho 54 cm, largo 64 cm</p>
