--- a/index.html
+++ b/index.html
@@ -31,6 +31,50 @@
   </head>
 
   <body>
+     <section>
+        <img src="./assets/img/hero_02.png" class="img-fluid w-100" alt="4_marcas">
+    </section>
+
+    <header class="navegador sticky-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary shadow">
+  <div class="container">
+    <a class="navbar-brand" href="index.html"><img src="./assets/img/Logo-Glam-Sin-Fondo.png" style="width: 150px; height: 80px;" alt="Logo_GLAM"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse " id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">INICIO</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">CONTACTO</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            PRODUCTO
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">ADIDAS</a></li>
+            <li><a class="dropdown-item" href="#">PUMA</a></li>
+            <li><a class="dropdown-item" href="#">NIKE</a></li>
+            <li><a class="dropdown-item" href="#">NEW BALANCE</a></li> 
+        </ul>
+        </li>  
+    </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control m-2" type="search" placeholder="Buscar producto..." aria-label="Search"/>
+        <button class="btn btn-outline-success m-2" type="submit">BUSCAR</button>
+        <button class="btn btn-outline-primary m-2 fs-5" type="button" data-bs-toggle="modal" data-bs-target="#authModal"><i class="bi bi-person"></i></button>
+        <button class="btn btn-outline-secondary m-2 fs-5" type="button" data-bs-toggle="offcanvas" data-bs-target="#cartCanvas" aria-controls="cartCanvas"><i class="bi bi-cart4"></i></button>
+      </form>
+    </div>
+  </div>
+</nav>
+</header>
     <main>
       <section class="container-fluid py-4 pb-5 my-5">
         <h2>Lo favorito de nuentras marcas <i class="bi bi-fire"></i></h2>
