solucione seccion hero.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,19 @@
 </nav>
 </header>
     <main>
+       <!-- HERO -->
+     <section class="card">
+      <img src="./assets/img/hero_01.png" alt="imagen_portada" class="img-fluid">
+      <h1 class="title_1">• GLAM •</h1>
+       <h2 class="display-6 fw-bold mb-4 title_2">Deportes que te mueven</h2>
+       <p class="lead mb-5 title_3">
+      Zapatillas, indumentaria y accesorios de alto rendimiento. Envíos a todo el país.</p>
+
+      <div class="hero-buttons">
+        <a href="#productos" class="btn btn-outline-light btn-lg">👟 Ver productos</a>
+        <a href="#ofertas" class="btn btn-outline-light btn-lg">⚡ Ofertas de hoy</a>
+      </div>
+    </section>
       <section class="container-fluid py-4 pb-5 my-5">
         <h2>Lo favorito de nuentras marcas <i class="bi bi-fire"></i></h2>
         <div class="row">
