--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="./css/hero.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta
       name="description"
