--- a/index.html
+++ b/index.html
@@ -150,6 +150,15 @@
               </div>
             </a>
           </div>
+          <section class="p-0 m-0">
+            <div class="container-IMG m-0 p-0" style="width: 100%; height: 100%;overflow: hidden;">
+            <img src="assets/img/portada Messi.jpg"
+             alt="Portada"
+             style="width: 100%;height: 100%; object-fit:cover;display: block;"
+             class="img-fluid w-100"
+             >
+             </div>
+          </section>
  
  <!-- Modal: Inicio de sesión -->
 <div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
