Agrego link de Awesome en el Head.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="./css/hero.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <meta
       name="description"
       content="En GLAM encontraras la mejor ropa deportiva: remeras, shorts, camperas, calzado. Moda, confort y rendimiento en un solo lugar"
@@ -198,6 +199,8 @@
           </div>
         </div>
       </section>
+
+
 
       <!-- Modal: Inicio de sesión -->
       <div
