--- a/index.html
+++ b/index.html
@@ -200,7 +200,73 @@
         </div>
       </section>
 
+      <section class="py-3">
+  <div class="container-fluid bg-light py-3">
+    <div class="row justify-content-center g-3 px-2 align-items-stretch">
+      <h2 class="text-dark text-center p-3">Más productos...</h2>
+      <div class="col-6 col-md-4 col-lg-2">
+        <div class="card text-center mx-auto h-100 shadow-sm card_principal" style="width: 10rem;">
+          <i class="fa-solid fa-shirt p-3 fs-1 icono_awesome"></i>
+          <div class="card-body">
+            <h5 class="card-title">Remeras</h5>
+            <a href="#" class="btn btn-outline-primary">Buscar</a>
+          </div>
+        </div>
+      </div>
 
+      <div class="col-6 col-md-4 col-lg-2">
+        <div class="card text-center mx-auto h-100 shadow-sm card_principal" style="width: 10rem;">
+          <i class="fa-solid fa-shoe-prints p-3 fs-1 icono_awesome"></i>
+          <div class="card-body">
+            <h5 class="card-title">Calzados</h5>
+            <a href="#" class="btn btn-outline-primary">Buscar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-md-4 col-lg-2">
+        <div class="card text-center mx-auto h-100 shadow-sm card_principal" style="width: 10rem;">
+          <i class="fa-solid fa-glasses p-3 fs-1 icono_awesome"></i>
+          <div class="card-body">
+            <h5 class="card-title">Anteojos</h5>
+            <a href="#" class="btn btn-outline-primary">Buscar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-md-4 col-lg-2">
+        <div class="card text-center mx-auto h-100 shadow-sm card_principal" style="width: 10rem;">
+          <i class="fa-solid fa-hat-cowboy p-3 fs-1 icono_awesome"></i>
+          <div class="card-body">
+            <h5 class="card-title">Gorras</h5>
+            <a href="#" class="btn btn-outline-primary">Buscar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-md-4 col-lg-2">
+        <div class="card text-center mx-auto h-100 shadow-sm card_principal" style="width: 10rem;">
+          <i class="fa-solid fa-person-running p-3 fs-1 icono_awesome"></i>
+          <div class="card-body">
+            <h5 class="card-title">Sports</h5>
+            <a href="#" class="btn btn-outline-primary">Buscar</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6 col-md-4 col-lg-2">
+        <div class="card text-center mx-auto h-100 shadow-sm card_principal" style="width: 10rem;">
+          <i class="fa-solid fa-bag-shopping p-3 fs-1 icono_awesome"></i>
+          <div class="card-body">
+            <h5 class="card-title">Bolsos</h5>
+            <a href="#" class="btn btn-outline-primary">Buscar</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+      </section>
 
       <!-- Modal: Inicio de sesión -->
       <div
