--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" <<<<<<<<< Temporary merge branch
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     1 crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/362f238c3f.js" crossorigin="anonymous"></script>
 
